<resources>
    <string name="app_name">Template</string>

    <string name="loading">Loading...</string>
    <string name="cancel">Cancel</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="pattern_month_day_short">MMM dd</string>
    <string name="pattern_month_day_long">MMMM dd</string>
    <string name="delete">Delete</string>
    <string name="save">SAVE</string>
    <string name="previous_days">Previous days</string>
    <string name="next_days">Next days</string>
    <string name="default_string">---</string>

    <string name="not_repeat">Not repeat</string>
    <string name="every_second">Every second</string>
    <string name="every_minute">Every minute</string>
    <string name="every_hour">Every hour</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="custom">Custom</string>
    <string name="no_records_found">No records found</string>
    <string name="yesterday">Yesterday</string>
    <string name="notes">Notes</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="info">Info</string>
    <string name="developed_by">Developed by</string>
    <string name="version">Version</string>
    <string name="items">items</string>
    <string name="item">item</string>
    <string name="no_items_selected">0 items</string>
    <string name="search">Search</string>
    <string name="initial_date">Initial Date</string>
    <string name="final_date">Final Date</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="tip">Tip</string>
    <string name="got_it">GOT IT</string>
    <string name="ept_click_to_add">Click the + button to add</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_filter">No filter</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="date_range">Date range</string>
    <string name="and">and</string>
    <string name="none">None</string>
    <string name="menu_save">SAVE</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">days</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="msg_data_cant_be_greater">The date can not be greater than today</string>
    <string name="msg_end_date">The end date can not be less than the starting date</string>
    <string name="restore">Restore</string>
    <string name="msg_exception_start_editing">An error occurred when start editing. Try again</string>
    <string name="msg_exception_saving">An error occurred while saving. Please, try again</string>
    <string name="exception_product_name">You must enter a product name</string>
    <string name="exception_product_quantity">You must enter the quantity</string>


    <!-- Label -->
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_starting_date">Starting Date</string>
    <string name="label_countdown">Countdown</string>
    <string name="label_entity_name">Name</string>
    <string name="label_entity_quantity">Quantity</string>
    <string name="label_entity_description">Description</string>
    <string name="label_entity_price">Price</string>
    <string name="label_status">Status</string>
    <string name="label_date_time">Date/Time</string>


    <!-- Hint -->
    <string name="hint_entity_name">Enter the name</string>
    <string name="hint_entity_description">Enter the description</string>
    <string name="hint_entity_quantity">Enter the quantity</string>
    <string name="hint_entity_price">Enter the price</string>


    <!-- Menus -->
    <string name="menu_new_product">New product</string>


    <!-- Titles -->
    <string name="title_entities">Entities</string>
    <string name="title_new_entity">New Entity</string>
    <string name="title_edit_entity">Edit Entity</string>
    <string name="title_entity_details">Entity Details</string>


    <!-- Empty Views -->
    <string name="empty_view_msg_no_entities_found">No entities found</string>


    <!-- Feedback Messages -->
    <string name="fdb_msg_entity_edited_successfully">Entity edited successfully!</string>
    <string name="fdb_msg_entity_inserted_successfully">Entity inserted successfully!</string>
    <string name="fdb_msg_entity_deleted_successfully">Entity deleted successfully!</string>


    <!-- Dialog -->
    <string name="dlg_title_warning">Warning</string>
    <string name="dlg_title_error_ops" translatable="false">Ops...</string>
    <string name="dlg_title_error_vish" translatable="false">Vish...</string>
    <string name="dlg_msg_cancel">Do you really want to cancel?</string>
    <string name="dlg_msg_delete_entity">Do you really want to delete the entity?</string>
    <string name="dlg_msg_delete">Do you really want to delete?</string>
    <string name="dlg_msg_error">An error occurred while performing the operation</string>
    <string name="dlg_msg_error_delete_entity">There was an error deleting the entity. Please try again.</string>
    <string name="dlg_msg_error_list">An error occurred while loading the list</string>
    <string name="dlg_msg_error_details">An error occurred while loading the details</string>
    <string name="dlg_msg_error_loading_products">An error occurred while loading the list</string>
    <string name="dlg_msg_error_product_details">An error occurred while loading the product details</string>
    <string name="dlg_msg_error_product_name_not_filled">It\'s necessary to fill in the name of the product</string>
    <string name="dlg_msg_error_checkout">An error occurred while checking out</string>
    <string name="dlg_option_pos_yes">Sim</string>
    <string name="dlg_option_neg_no">No</string>


    <!-- Navigation Menu -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="menu_nav_item3">Item 3</string>
    <string name="menu_nav_item4">Item 4</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main_tab">MainTabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="dlg_msg_error_price_invalid">It is necessary to fill the price correctly</string>


</resources>
