<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/nav_search" />


    </group>

    <item android:title="Section">
        <menu>
            <item
                android:id="@+id/nav_item4"
                android:icon="@drawable/ic_circle_black_24dp"
                android:title="@string/menu_nav_item4" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>